Incluye cabecera con color, feo el diseño

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,3 +6,15 @@ body
     font-family: "Arial";
 
 }
+
+#container{
+
+    border: 9px solid #1C6EA4;
+}
+
+#cabecera {
+    color: aliceblue;
+    background-color: cornflowerblue;
+    -webkit-box-shadow: 5px 5px 15px 5px #000000; 
+    box-shadow: 5px 5px 15px 5px #000000;
+}
